# document-refinery

./: .gitignore  DOMAIN_NOTES.md  Dockerfile  Document_Refinery_Complete_Report.md  README.md  REPORT_IMPLEMENTATION_APPENDIX.md  app.py  colab_gpu_refinery.ipynb  colab_runner.ipynb  colab_runner.py  main.py  pyproject.toml  refinery.py  setup_gpu.sh
.refinery/: extraction_ledger.jsonl
.refinery/artifact/: asked_queries.jsonl  qna_economic_report.json  qna_examples.json  qna_financial_statement.json  qna_institutional_report.json  qna_public_sector_report.json
.refinery/extraction_logs/: extraction_ledger.jsonl
.refinery/extractions/: Audit Report - 2023_extraction.json  CBE Annual Report 2006-7 _extraction.json  CBE Annual Report 2008-9 _extraction.json  Consumer Price Index, April 2025_extraction.json  fta_performance_survey_final_report_2022_extraction.json  tax_expenditure_ethiopia_2021_22_extraction.json
.refinery/ocr/: unknown_page_1.txt  unknown_page_10.txt  unknown_page_11.txt  unknown_page_12.txt  unknown_page_2.txt  unknown_page_3.txt  unknown_page_4.txt  unknown_page_5.txt  unknown_page_6.txt  unknown_page_7.txt  unknown_page_8.txt  unknown_page_9.txt
.refinery/pageindex/: 2013-E.C-Assigned-regular-budget-and-expense_pageindex.json  2013-E.C-Audit-finding-information_pageindex.json  2018_Audited_Financial_Statement_Report_pageindex.json  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF_pageindex.json  2020_Audited_Financial_Statement_Report_pageindex.json  2021_Audited_Financial_Statement_Report_pageindex.json  2022_Audited_Financial_Statement_Report_pageindex.json  CBE ANNUAL REPORT 2023-24_pageindex.json  CBE Annual Report 2008-9 _pageindex.json  CBE Annual Report 2012-13_pageindex.json  Company_Profile_2024_25_pageindex.json  Consumer Price Index June 2025_pageindex.json  Consumer Price Index, April 2025_pageindex.json  IR_FinancialReport_77th_3Q_en_pageindex.json  auer,+72_Telemedicine+An+IoT+based+Remote+Healthcare+System_pageindex.json  fta_performance_survey_final_report_2022_pageindex.json  sample_financial_report_5_pages_pageindex.json  tax_expenditure_ethiopia_2021_22_pageindex.json
.refinery/profiles/: Audit Report - 2023_1772610816.json  Audit Report - 2023_1772610951.json  Audit Report - 2023_1772611111.json  (+54 more)
rubric/: extraction_rules.yaml
scripts/: build_corpus_artifacts.py  extract_tables_to_json.py
src/: __init__.py
src/models/: ldu.py  (+6 more)
tests/: __init__.py  test_corpus_artifacts.py  test_extraction.py  test_triage_agent.py  test_working.py
(+105 files in other folders)
