[project]
name = "document-refinery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.76.0",
    "loguru>=0.7.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "tiktoken>=0.12.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "torchvision>=0.25.0",
]
